samples/glossentry/invalid/R13.dita
<?xml version="1.0" encoding="UTF-8"?>
<glossentry>
  <glossterm>Term</glossterm>
  <glossdef><p>Definition.</p></glossdef>
  <glossBody>
    <glossScopeNote>Note 1</glossScopeNote>
    <glossScopeNote>Note 2</glossScopeNote>
  </glossBody>
</glossentry>